# pg_exporter

./: .clinerules  .gitignore  .justfile  AGENTS.md  CHANGELOG.md  CONTAINER_IMPROVEMENTS.md  CONTRIBUTING.md  Cargo.toml  Containerfile  PRE_RELEASE_CHECKLIST.md  README.md  mise.toml
.devcontainer/: README.md  compose.yaml  configure-git.sh  devcontainer.json  devcontainer.portable.json  grafana-dashboards.yml  grafana-datasource.yml  init-db.sql  post-start.sh  postcreate.sh  prometheus.yml
.github/: copilot-instructions.md
.github/workflows/: a.yml  build.yml  coverage.yml  deploy.yml  test.yml
bench-artifacts/rust-soak/20260308T095633Z/: run-meta.txt
contrib/debian/: postinst  prerm
contrib/systemd/: pg_exporter.env.example  pg_exporter.service
db/config/postgres/: postgresql.conf
docs/: diagnosing-database-pressure.md
grafana/: Dockerfile  README.md  dashboard.json  prometheus.yml.tmpl  stack-entrypoint.sh
grafana/provisioning/dashboards/: dashboard.yaml
scripts/: bloat.sql  blocking-tree.sql  compare-cpu-live.sh  connections.sql  dev-ssh  dev-up  exercise-collector-load.sh  exercise-collectors.sh  exercise-new-collectors.sh  install-postgres-client.sh  long-running.sql  metrics-dev  monitor-exporter.sh  on-cpu-queries.sql  pg-connection.sh  pre-commit-hook.sh  run-autovacuum-workflow.sh  run-vacuum-workflow.sh  seq-scans.sql  setup-local-test-db.sh  test-deploy-validation.sh  test-listen-addresses.sh  top-queries.sql  validate-dashboard.sh
scripts/benchmark/: README.md  check-rust-soak.sh  run-rust-soak.sh  rust-soak-dashboard.json
src/: lib.rs
src/cli/: mod.rs  start.rs  telemetry.rs
src/cli/actions/: mod.rs  run.rs
src/cli/commands/: collectors.rs  mod.rs  options.rs
src/cli/dispatch/: mod.rs
src/collectors/: config.rs  mod.rs  register_macro.rs  registry.rs  util.rs
src/collectors/activity/: connections.rs  locks.rs  mod.rs  queries.rs  wait.rs
src/collectors/citus/: activity.rs  lock_waits.rs  mod.rs  nodes.rs  schemas.rs  shards.rs  stat_counters.rs  stat_statements.rs  stat_tenants.rs  tables.rs
src/collectors/database/: README.md  catalog.rs  mod.rs  stats.rs
src/collectors/default/: README.md  archiver.rs  bgwriter.rs  checkpointer.rs  mod.rs  postmaster.rs  settings.rs  version.rs  wal.rs
src/collectors/exporter/: README.md  mod.rs  process.rs  scraper.rs
src/collectors/index/: mod.rs  stats.rs  unused.rs
src/collectors/internal/: README.md  mod.rs  process.rs  scraper.rs
src/collectors/locks/: count.rs  mod.rs  relations.rs
src/collectors/replication/: README.md  mod.rs  replica.rs  slots.rs  stat_replication.rs  stat_replication_slots.rs
src/collectors/sequences/: README.md  mod.rs  pg_sequences.rs
src/collectors/slru/: README.md  mod.rs  pg_stat_slru.rs
src/collectors/stat/: mod.rs  user_tables.rs
src/collectors/stat_io/: mod.rs  pg_stat_io.rs
src/collectors/statements/: README.md  mod.rs  pg_statements.rs
src/collectors/system/: README.md  cpu.rs  memory.rs  mod.rs  process.rs
src/collectors/tls/: certificate.rs  connection_stats.rs  mod.rs  server_config.rs
src/collectors/vacuum/: analyze_progress.rs  blockers.rs  create_index_progress.rs  mod.rs  progress.rs  stats.rs
src/exporter/: mod.rs  shutdown.rs
src/exporter/handlers/: health.rs  metrics.rs  mod.rs
tests/: .gitignore  TESTING.md  TLS_TESTING.md  cli_integration.rs  collector_safety.rs  collectors_tests.rs  connection_budget.rs  dispatch.rs  exporter.rs  generate-ssl-certs.sh  health.rs  init-ssl.sh  metrics.rs  start-replication-postgres.sh  start-ssl-postgres.sh  stop-replication-postgres.sh  stop-ssl-postgres.sh  tls_metrics_integration.rs
tests/collectors/: README.md  connection.rs  connection_hardening.rs  mod.rs  sequences.rs  slru.rs  stat_io.rs  system.rs
tests/collectors/activity/: connections.rs  mod.rs  queries.rs  wait.rs
tests/collectors/citus/: citus_topology.rs  mod.rs  no_extension.rs
tests/collectors/database/: README.md  catalog.rs  mod.rs  stat.rs
tests/collectors/default/: archiver.rs  bgwriter.rs  checkpointer.rs  mod.rs  postmaster.rs  settings.rs  version.rs  wal.rs
tests/collectors/index/: mod.rs  regression.rs  stats.rs  unused.rs
tests/collectors/locks/: README.md  count.rs  mod.rs  relations.rs
tests/collectors/replication/: mod.rs  replica.rs  replica_podman.rs  replica_topology.rs  slots.rs  stat_replication.rs  stat_replication_slots.rs
tests/collectors/stat/: README.md  mod.rs  user_tables.rs
tests/collectors/statements/: mod.rs  pg_statements.rs
tests/collectors/tls/: certificate.rs  connection_stats.rs  mod.rs  server_config.rs
tests/collectors/vacuum/: README.md  analyze_progress.rs  blockers.rs  create_index_progress.rs  mod.rs  progress.rs  stats.rs
tests/common/: mod.rs
