[package]
name = "pg_exporter"
version = "0.4.4"
edition = "2024"
authors = ["Nicolas Embriz <nbari@tequila.io>"]
description = "PostgreSQL metric exporter for Prometheus"
documentation = "https://docs.rs/postgres_rexporter/latest/postgres_rexporter/"
readme = "README.md"
keywords = [
    "postgresql",
    "prometheus",
    "metrics",
    "exporter",
    "observability"
]
categories = [
    "command-line-utilities",
    "network-programming",
    "database",
]
license = "BSD-3-Clause"

[features]
default = []
musl = ["openssl/vendored"]

[dependencies]
anyhow = "1.0"
axum = { version = "0.8.6", features = ["tracing"] }
chrono = "0.4.42"
clap = { version = "4.5.48", features = ["env"] }
openssl = { version = "0.10", optional = true, features = ["vendored"] }
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic", "gzip-tonic", "tls", "tls-roots", "trace"] }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
secrecy = "0.10"
serde = "1.0"
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["ipnetwork", "postgres", "runtime-tokio", "tls-rustls", "uuid"] }
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["request-id", "set-header", "trace"] }
tracing = "0.1.41"
tracing-opentelemetry = "0.32.0"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
ulid = "1.2.1"
url = "2.5.7"
temp-env = "0.3.6"
prometheus = "0.14.0"
regex = "1.11.3"
futures = "0.3.31"
tonic = { version = "0.14.2", features = ["tls-native-roots"] }
base64 = "0.22.1"
tracing-futures = "0.2.5"
opentelemetry-http = "0.31.0"
once_cell = "1.21"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/pg_exporter", dest = "/usr/bin/pg_exporter", mode = "0755" },
]

[build-dependencies]
built = { version = "0.8.0", features = ["git2"] }

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
