[package]
name = "pg_exporter"
version = "0.9.7"
edition = "2024"
authors = ["Nicolas Embriz <nbari@tequila.io>"]
description = "PostgreSQL metric exporter for Prometheus"
documentation = "https://docs.rs/pg_exporter/latest/pg_exporter/"
readme = "README.md"
repository = "https://github.com/nbari/pg_exporter"
keywords = ["postgresql", "prometheus", "metrics", "exporter", "observability"]
categories = ["command-line-utilities", "network-programming", "database"]
license = "BSD-3-Clause"

[lints.rust]
warnings = "deny"

[lints.clippy]
# Allow unstable/opinionated lints (lower priority so individual lints can override)
nursery = { level = "allow", priority = -1 }

# Enforce pedantic lints
pedantic = "deny"

# Core lint groups
all = "deny"
correctness = "deny"
suspicious = "deny"
perf = "deny"
complexity = "deny"

# Safety-critical lints
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
indexing_slicing = "deny"
await_holding_lock = "deny"

# Performance + memory reliability
needless_borrow = "deny"
needless_collect = "deny"
large_stack_arrays = "deny"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8.8", features = ["tracing"] }
chrono = "0.4.44"
clap = { version = "4.5.60", features = ["env"] }
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", default-features = false, features = ["grpc-tonic", "gzip-tonic", "tls", "tls-roots", "trace"] }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
secrecy = "0.10"
serde = "1.0"
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["ipnetwork", "postgres", "runtime-tokio", "tls-rustls", "uuid"] }
tokio = { version = "1.49.0", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["request-id", "set-header", "trace"] }
tracing = "0.1.44"
tracing-opentelemetry = "0.32.1"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
ulid = "1.2.1"
url = "2.5.8"
prometheus = "0.14.0"
regex = "1.12.3"
futures = "0.3.32"
tonic = { version = "0.14.5", features = ["tls-native-roots"] }
base64 = "0.22.1"
tracing-futures = "0.2.5"
opentelemetry-http = "0.31.0"
once_cell = "1.21"
sysinfo = "0.38"
x509-parser = "0.18"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/pg_exporter", dest = "/usr/local/bin/pg_exporter", mode = "0755" },
    { source = "contrib/systemd/pg_exporter.service", dest = "/etc/systemd/system/pg_exporter.service", mode = "0644" },
    { source = "contrib/systemd/pg_exporter.env.example", dest = "/etc/pg_exporter/pg_exporter.env", mode = "0640" },
]

[package.metadata.deb]
assets = [
  ["target/release/pg_exporter", "/usr/local/bin/pg_exporter", "755"],
  ["contrib/systemd/pg_exporter.service", "/etc/systemd/system/pg_exporter.service", "644"],
  ["contrib/systemd/pg_exporter.env.example", "/etc/pg_exporter/pg_exporter.env", "640"],
]
depends = ""
maintainer-scripts = "contrib/debian"

[build-dependencies]
built = { version = "0.8.0", features = ["git2"] }

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"

[dev-dependencies]
nix = "0.31"
prometheus = "0.14"
reqwest = { version = "0.13", features = ["json"] }
serde_json = "1.0"
temp-env = "0.3"
tempfile = "3.25"
tokio = { version = "1", features = ["full", "test-util"] }
